--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@contentful/rich-text-types": "^17.0.0",
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@tabler/icons-react": "^3.22.0",
     "contentful": "^11.2.1",
     "emailjs": "^4.0.3",
     "lucide-react": "^0.456.0",
